New bootstratp features added.

--- a/app/assets/stylesheets/cards.css.scss
+++ b/app/assets/stylesheets/cards.css.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the cards controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.cards {
+  border-bottom: solid 1px #CCC;
+  padding: 5px 0;
+
+}
+
+.cards p {
+  margin: 4px 0;
+}
