--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,13 @@
       <div class="navbar-inner">
         <div class="container">
           <a href="#" class="brand">Animoed</a>
+          <ul class="nav">
             <li class="nav">
               <li><%= link_to "All Cards", cards_path  %>
             </li>
-
+            <li><%= link_to "New Cards", new_card_path %>
+            </li>
+          </ul>
         </div>
       </div>
      </div>
