--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -1,27 +1,21 @@
-<h1>Listing cards</h1>
+<div class="page-header">
+    <h1>All U.S. History Cards</h1>
+</div>
 
-<table>
-  <tr>
-    <th>Question</th>
-    <th>Answer</th>
-    <th>Category</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+<% @cards.each do  |card| %>
 
-<% @cards.each do |card| %>
-  <tr>
-    <td><%= card.question %></td>
-    <td><%= card.answer %></td>
-    <td><%= card.category %></td>
-    <td><%= link_to 'Show', card %></td>
-    <td><%= link_to 'Edit', edit_card_path(card) %></td>
-    <td><%= link_to 'Destroy', card, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
+    <div class="cards">
+      <strong><%= card.question %></strong>
+      <p><%= card.answer %></p>
+      <div class="meta">
+        <%= link_to time_ago_in_words(card.created_at) + "ago" , card %>
+
+        <span class="admin">
+        | <%= link_to "Edit", edit_card_path(card) %> |
+          <%= link_to "Delete", card, method: :delete, data: { confirm: "Are you sure you want to delete?"} %>
+
+        </span>
+      </div>
+    </div>
+
 <% end %>
-</table>
-
-<br />
-
-<%= link_to 'New Card', new_card_path %>
