Modified cards.css.scss file in assets with CoffeeScript toggle css class hover.

--- a/app/assets/stylesheets/cards.css.scss
+++ b/app/assets/stylesheets/cards.css.scss
@@ -11,3 +11,15 @@
 .cards p {
   margin: 4px 0;
 }
+
+.cards.hover {
+  background: #FAFAFA;
+}
+
+.cards .admin {
+  display: none;
+}
+
+.cards.hover .admin {
+  display: inline;
+}
