--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -1,6 +1,7 @@
 <div class="page-header">
     <h1>All U.S. History Cards</h1>
 </div>
+<%= link_to "Post new Card", new_card_path %>
 
 <% @cards.each do  |card| %>
 
