--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,8 +23,14 @@
       </div>
      </div>
     <div class="container">
-        <%= yield %>
+
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
+
+      <%= yield %>
     </div>
+
+
 
 
 </body>
