--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -1,6 +1,12 @@
 <p id="notice"><%= notice %></p>
 
+
 <p>
+  <b>Name:</b>
+  <%= @card.user.full_name %>
+</p>
+
+ <p>
   <b>Question:</b>
   <%= @card.question %>
 </p>
