--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@card) do |f| %>
+<%= simple_form_for(@card, html: {class: "form-horizontal"}) do |f| %>
   <% if @card.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@card.errors.count, "error") %> prohibited this card from being saved:</h2>
@@ -11,19 +11,26 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :question %><br />
-    <%= f.text_area :question %>
-  </div>
-  <div class="field">
-    <%= f.label :answer %><br />
-    <%= f.text_field :answer %>
-  </div>
-  <div class="field">
-    <%= f.label :category %><br />
-    <%= f.number_field :category %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+    <%= f.input :user_id %>
+    <%= f.input :question %>
+    <%= f.input :answer %>
+    <%= f.input :category %>
+
+
+  <!--#<div class="field">
+   # <%= f.label :question %><br />
+    #<%= f.text_area :question %>
+  #</div>
+  #<div class="field">
+   # <%= f.label :answer %><br />
+    #<%= f.text_field :answer %>
+  #</div>
+  #<div class="field">
+   # <%= f.label :category %><br />
+    #<%= f.number_field :category %>
+  #</div>-->
+
+    <div class="form-actions">
+    <%= f.button :submit %>
   </div>
 <% end %>
