--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
+<% provide(:title, 'US History Project!') %>
 <!DOCTYPE html>
 <html>
 <head>
-  <title>UshProject</title>
+  <title><%= yield(:title) %></title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
@@ -18,6 +19,16 @@
             </li>
             <li><%= link_to "New Cards", new_card_path %>
             </li>
+           </ul>
+          <ul class="nav pull-right">
+            <% if user_signed_in? %>
+                <li><%= link_to current_user.full_name, edit_user_registration_path %></li>
+                <li><%= link_to "Log Out", destroy_user_session_path, method: :delete  %></li>
+            <% else  %>
+                <li><%=  link_to "Register", new_user_registration_path %></li>
+                <li><%= link_to "Log In", new_user_session_path %></li>
+            <% end %>
+
           </ul>
         </div>
       </div>
@@ -28,6 +39,7 @@
       <p class="alert"><%= alert %></p>
 
       <%= yield %>
+
     </div>
 
 
