--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,9 +34,16 @@
       </div>
      </div>
     <div class="container">
+      <% if flash[:notice] %>
+          <div class="alert">
+            <button class="close" data-dismiss="alert">X</button>
+            <%= flash[:notice]  %>
 
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
+          </div>
+       <% end %>
+
+      <!--<p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>-->
 
       <%= yield %>
 
