--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,20 +34,31 @@
       </div>
      </div>
     <div class="container">
+
       <% if flash[:notice] %>
-          <div class="alert alert-success">
-            <button class="close" data-dismiss="alert">X</button>
-            <%= flash[:notice]  %>
 
-          </div>
-      <% end %>
+          <% flash.each do |type, message| %>
 
-      <% if flash[:alert] %>
-          <div class="alert alert-error">
+              <div class="alert" <%= flash_class type %> >
+                <button class="close" data-dismiss="alert">X</button>
+                <%= message  %>
+
+          <% end %>
+               </div>
+
+          <!--<div class="alert alert-success">
             <button class="close" data-dismiss="alert">X</button>
             <%= flash[:alert]  %>
 
           </div>
+      <% end %>
+        <% if flash[:alert] %>
+          <div class="alert alert-error">
+            <button class="close" data-dismiss="alert">X</button>
+            <%= flash[:alert]  %>
+
+          </div>-->
+
       <% end %>
 
       <!--<p class="notice"><%= notice %></p>
