--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -14,7 +14,7 @@
     <%= f.input :user_id, collection: User.all, label_method: :full_name %>
     <%= f.input :question %>
     <%= f.input :answer %>
-    <%= f.input :category %>
+    <%= f.input :category, collection: Subcategory.all, label_method: :description %>
 
 
   <!--#<div class="field">
