--- a/app/views/subcategories/_form.html.erb
+++ b/app/views/subcategories/_form.html.erb
@@ -1,10 +1,12 @@
-<%= simple_form_for(@subcategory) do |f| %>
+<%= simple_form_for(@subcategory, html: {class: "form-horizontal" }) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :description %>
-    <%= f.input :category %>
-  </div>
+
+      <div class="form-inputs">
+            <%= f.input :description %>
+            <%= f.input :category %>
+       </div>
+
 
   <div class="form-actions">
     <%= f.button :submit %>
